test_fixtures/variable/use_false_as_var.lox
// ParserError: UnexpectedToken found False from l2c5 to l2c10 expected Identifier
var false = "value";
